Changed format of title image again to try to prevent horizontal squishing on phone screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,6 +136,11 @@ img {
   border-radius: 5px;
 }
 
+.dont-squish {
+  height: auto;
+  width: auto;
+}
+
 .rcorners {
   border-radius: 12px;
 }
